Wirtschafts_Simulationen/10_b/v6/out_planetenwirtschaft/manifest.md
# Planetenwirtschaft-Simulation: erweiterte Wirkungswirtschaft

Diese Simulation modelliert keine nationale Wirtschaft mit Geld, Preisen, BIP, Löhnen, Profit, Miete oder Außenhandelswerten.
Sie modelliert eine planetare Wirkungswirtschaft: Bedürfnisse, Stoffe, Potenzen, ökologische Grenzen, Zeitbeiträge, Kapazitäten, Sektoren und soziale Rückkopplung.

## Kernprinzip

Eine wirtschaftliche Handlung ist hier keine Kauf-/Verkauf-Transaktion, sondern eine Zustandsänderung:

```text
Phänomen + Kausalität + Zeit + Intensität + Existenz + Potenzen + Wirkungen
+ Substanz + Materie + Differenz + Bestimmung + Winkelrichtung
→ Beitrag / Annahme / Transfer → neue Wirklichkeit
```

## Erweiterung gegenüber der Grundversion

- `manufacturing`: Grundindustrie, Werkzeuge, Ersatzteile, materielle Transformation.
- `storage`: Lager, Puffer, Stromspeicher, Vorratssicherheit.
- `governance`: demokratische Koordination, Konfliktlösung, Wahrheitskorrektur.
- `knowledge`: Forschung, offene Pläne, technisches Lernen.
- `resilience`: Katastrophenschutz, Redundanz, Schockabsorption.
- `macro_accounts.csv`: planetare Makrokonten ohne Geldlogik.
- `effect_flow_audit.csv`: Kauf/Verkauf/Handel als Wirkungsfluss-Audit mit Vertragsbedingungen und Wahrheitsstapel.
- `trade_contracts_report.md`: lesbare Darstellung von Handeln in allen Dimensionen.
- `trade_dimension_catalog.csv`: Produkte, Arbeitsplätze, Dienstleistungen, Ökologie- und Klimaklauseln je Domäne.
- `dimension_guide.csv`: Bedeutung jeder Dimension und ihr Verhältnis zu Verträgen.

## Was planetar ist

- Planetare Grenzen wirken auf alle Kommunen, nicht nur auf ein Land.
- Regionen sind Bioregionen und Versorgungsknoten, keine Nationalstaaten.
- Überschüsse werden über reale Dringlichkeit und Logistik verteilt, nicht über Kaufkraft.
- Abfall ist eine ungelöste Materialdifferenz und wird in Reparatur/Stoffkreisläufe zurückgeführt.
- Natur ist kein externes Rohstofflager, sondern Bedingung der Simulation.
- Wahrheitswerte sind korrigierbar: Vertrauen, Demokratie und Fehlerprüfung beeinflussen die Steuerung.

## Szenario

`planetary_commons`

## Anfang → Ende

| Kennzahl | Anfang | Ende | Veränderung |
|---|---:|---:|---:|
| Bevölkerung | 8.100b | 8.270b | 169.775m |
| Wohlbefinden | 0.788 | 0.975 | 0.187 |
| unerfüllte Grundbedürfnisse | 0.200 | 0.018 | -0.182 |
| Vertrauen | 0.640 | 1.000 | 0.360 |
| Autonomie | 0.698 | 0.935 | 0.236 |
| Wahrheitsfehler | 0.168 | 0.020 | -0.148 |
| Versorgungsungleichheit | 0.010 | 0.019 | 0.009 |
| Resilienzindex | 0.907 | 0.904 | -0.003 |
| Zirkularitätsindex | 0.422 | 0.993 | 0.571 |
| Koordinationsqualität | 0.697 | 0.864 | 0.167 |
| planetarer Reproduktionsindex | 0.785 | 0.965 | 0.179 |
| planetare Überschreitung | 0.000 | 0.028 | 0.028 |
| mittlerer Grenzdruck | 0.914 | 0.568 | -0.346 |

## Endzustand planetarer Grenzen

- `climate`: 0.791
- `biosphere`: 0.200
- `freshwater`: 0.563
- `soil`: 0.200
- `pollution`: 0.352
- `material_throughput`: 0.843
- `energy_throughput`: 1.028  ⚠️ Überschreitung

## Lesart

Ein Wert über `1.0` bei planetaren Grenzen bedeutet Überschreitung. Ein sinkender Wahrheitsfehler bedeutet, dass Rückkopplung und demokratische Korrektur besser wurden. Sinkende Autonomie ist ein Warnsignal: Dann kippt die Wirkungswirtschaft in Kontrolle.

## Wichtig

Das Modell ist synthetisch und nicht kalibriert. Es ist ein Baukasten für Simulation, Spielmechanik, Systemdesign und Theorieentwicklung.
